kubernetes/deployment-v2.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: hello-user
    version: v1
  name: hello-user-v2
spec:
  replicas: 3
  strategy: 
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-user
        version: v1
      name: hello-user
    spec:
      volumes:
        - name: userfile
          configMap:
            name: hello-user-config
            items:
              - key: user
                path: user
      containers:
      - name: hello-user
        image: callmeradical/hello-user:kubernetes
        imagePullPolicy: Always
        volumeMounts:
          - name: userfile
            mountPath: "/config"
            readOnly: true
        resources:
          requests:
            cpu: 300m
            memory: 200Mi
          limits:
            cpu: 300m
            memory: 200Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
